# pburp

./: .env.example  .gitignore  LICENSE  README.md  config.toml  pyproject.toml  ruff.toml
docs/: burp-mcp-api.md
plugins/claude-plugin/: .mcp.json
plugins/claude-plugin/.claude-plugin/: plugin.json
src/pburp/: __init__.py  registry.py  server.py
