[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[project]
name = "pburp"
version = "0.1.0"
description = "Intercept everything at agent speed."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "python-box>=7.3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.4",
]

