[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project]
name = "pburp"
version = "1.0.0"
description = "Intercept everything at agent speed."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-pburp = "pburp.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

